--- a/package.json
+++ b/package.json
@@ -19,5 +19,17 @@
   "bugs": {
     "url": "https://github.com/NealXavier/VueWheels/issues"
   },
-  "homepage": "https://github.com/NealXavier/VueWheels#readme"
+  "homepage": "https://github.com/NealXavier/VueWheels#readme",
+  "dependencies": {
+    "vue": "^2.6.11",
+    "vue-hot-reload-api": "^2.3.4"
+  },
+  "devDependencies": {
+    "@vue/component-compiler-utils": "^3.2.0",
+    "parcel-bundler": "^1.12.4",
+    "vue-template-compiler": "^2.6.11"
+  },
+  "alias": {
+    "vue" : "./node_modules/vue/dist/vue.common.js"
+  }
 }
