--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": " yangsu's ui components using vue",
   "main": "index.js",
   "scripts": {
-    "start":"npx parcel index.html --no-cache",
+    "start": "npx parcel index.html --no-cache",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/NealXavier/VueWheels#readme",
   "dependencies": {
+    "icon.vue": "^0.1.5",
     "stylus": "^0.54.8",
     "stylus-loader": "^3.0.2",
     "vue": "^2.6.11",
